Resolved problem next button not showing

--- a/static/main.css
+++ b/static/main.css
@@ -356,9 +356,8 @@
 .centering {
   text-align: left !important;
   vertical-align: top;
-  margin-left: 20px;
-  margin-right: 20px;
-  font-size: 16px;
+  /* margin-left: 25px; */
+  /* margin-right: 25px; */
 
 }
 
@@ -369,7 +368,7 @@
   border: 1px solid lightgray;
   background-color: lightgray;
   /* width: 100%; */
-  /* padding-left: 0px; */
+  /* padding-left: 30px; */
   /* margin-right: 40px; */
   /* width: 100%; */
   height: 80px;
